k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: plexserver
  labels:
    shared-gateway-access: "true"
